--- a/index.html
+++ b/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <title>SMTNetworking</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-  <p>Olá, Mundo</p>
-  
-  
-  
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <header id="logo">
+        <img class="logo" src="img/Reboot.png" alt="logo">
+    </header>
+
+    <section class="container">
+        <div class="colOne">
+            <div>
+                <h1>Lorem ipsum dolor sit amet</h1>
+                <p>Quisque dictum tincidunt porttitor. Mauris maximus libero felis, 
+                    sed egestas libero suscipit ut. Donec vitae turpis consectetur, 
+                    ultricies lacus condimentum, suscipit tortor. Aenean luctus libero a 
+                    feugiat fringilla. Maecenas varius vehicula tristique. Aliquam a augue 
+                    fringilla, interdum tortor at, congue nibh. Cras egestas lorem quam. Cras 
+                    placerat vestibulum molestie.</p>
+            </div>
+            <div id="divCountdown">
+                <ul>  
+                    <li id="days"></li>
+                    <li id="hours"></li>
+                    <li id="minutes"></li>
+                    <li id="seconds"></li>
+                </ul>
+            </div>
+
+        </div>
+
+
+
+        <div  class="colTwo">
+           <h2>Lorem ipsum dolor sit</h2> 
+           <p>Duis fermentum orci quam, id commodo justo fringilla ac.</p>
+        </div>
+
+    </section>
+
+
+
+    
+   
+
+    <script src='.js/countDown.js'> </script>
 </body>
+
 </html>
