--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     placerat vestibulum molestie.</p>
             </div>
             <div id="divCountdown">
+                <h2>A LIVE COMEÇA EM:</h2>
                 <ul>  
                     <li id="days"></li>
                     <li id="hours"></li>
@@ -46,7 +47,7 @@
     
    
 
-    <script src='.js/countDown.js'> </script>
+    <script src='./js/countDown.js'> </script>
 </body>
 
 </html>
