--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
             <div id="divCountdown">
                 <h2>A LIVE COMEÇA EM:</h2>
+                <div id="divCd"></div>
                 <ul>  
                     <li id="days"></li>
                     <li id="hours"></li>
@@ -38,6 +39,12 @@
         <div  class="colTwo">
            <h2>Lorem ipsum dolor sit</h2> 
            <p>Duis fermentum orci quam, id commodo justo fringilla ac.</p>
+        
+            <form>
+                <input type="text" placeholder="Nickname"  name="nickname" required>
+                <input type="email" placeholder="Email" name="email" required>
+                <button title="Enviar link" type="submit" >ENVIAR LINK</button>
+            </form>
         </div>
 
     </section>
