--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         </div>
 
     </section>
-
+    <footer class="text-center pb-4">
+        <span> ® 2020 - Reboot Company</span>
+    </footer>
 
     <script src='./js/countDown.js'> </script>
 </body>
