--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Agencia Reboo"></meta>
+    <title>Agencia Reboot</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
     <link rel="stylesheet" href="./css/index.css">
@@ -43,8 +45,12 @@
             
                 <form class="d-flex justify-content-center"> 
                     <div class="form-group">
-                        <input class="form-control" type="text" placeholder="Nickname"  name="nickname" required>
-                        <input class="form-control"type="email" placeholder="Email" name="email" required>
+                        <label>
+                            <input class="form-control" type="text" placeholder="Nickname"  name="nickname" required>
+                        </label>
+                        <label>
+                            <input class="form-control"type="email" placeholder="Email" name="email" required>
+                        </label>
                         <button class="btn" title="Enviar link" type="submit" >ENVIAR LINK</button>
                     </div>
                 </form>
