popup urgencia + pixel fb

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Agencia Reboot"></meta>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
+    
     <!-- Facebook Pixel Code -->
 <script>
     !function(f,b,e,v,n,t,s)
@@ -23,6 +24,7 @@
     src="https://www.facebook.com/tr?id=293684788303898&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Facebook Pixel Code -->
+
     <title>Agencia Reboot</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -73,11 +75,35 @@
         </div>
 
     </section>
+
+    <div class="popUpBox">
+        <span class="helper"></span>
+        <div>
+            <div class="popupClose">&times;</div>
+            <p>Opa! Não saia sem antes se inscrever na nossa Live sobre <strong>Carreiras em Marketing Digital!</strong></p>
+        </div>
+    </div>
+
+
     <footer class="text-center pb-4">
         <span> ® 2020 - Reboot Company</span>
     </footer>
 
     <script src='./js/countDown.js'> </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+    <script> fbq('track', 'ViewContent');</script>
+    <script>
+    $('#logo').mouseleave(function(){
+    $('.popUpBox').show();
+    });
+    $('.popUpBox').click(function(){
+        $('.popUpBox').hide();
+    });
+    $('.popupClose').click(function(){
+        $('.popUpBox').hide();
+    });
+
+    </script>
 </body>
 
 </html>
