correções e thank you page

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             
                 <form class="d-flex justify-content-center" action="https://agenciareboot.api-us1.com" method="POST"> 
                     <div class="form-group">
-                        <label for="nickname">Nickname</label>
+                        <label for="nickname"></label>
                         <input class="form-control" id="nickname" type="text" placeholder="Nickname"  name="nickname" required>
-                        <label for="email">E-mail</label>
+                        <label for="email"></label>
                         <input class="form-control"type="email" id="name" placeholder="Email" name="email" required>
                         <button class="btn" title="Enviar link" type="submit" >ENVIAR LINK</button>
                     </div>
