copies e background img

--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
         <div class="colwrap d-flex">
             <div class=" colOne">
                 <div class="text-colOne">
-                    <h1>Lorem ipsum dolor sit amet</h1>
-                    <p>Quisque dictum tincidunt porttitor. Mauris maximus libero felis, 
-                        sed egestas libero suscipit ut. Donec vitae turpis consectetur, 
-                        ultricies lacus condimentum, suscipit tortor. Aenean luctus libero a 
-                        feugiat fringilla. Maecenas varius vehicula tristique. Aliquam a augue 
-                        fringilla, interdum tortor at, congue nibh. Cras egestas lorem quam. Cras 
-                        placerat vestibulum molestie.</p>
+                    <h1>Você já imaginou trabalhar com grandes jogadores de esports?</h1>
+                    <p>Estamos animados para te contar como isso é possível!</p>
+                    <p>UMA LIVE SOBRE TRABALHAR COM O MARKETING DIGITAL DAS GRANDES MARCAS DE EQUIPAMENTOS GAMERS!</p>
+                    <p>COOOORRE PARA GARANTIR SUA VAGA! PREENCHE O NOSSO FORMULÁRIO</p>
+                        
                 </div>
                 <div id="divCountdown">
                     <h2>A LIVE COMEÇA EM:</h2>
@@ -68,6 +66,8 @@
                         <input class="form-control" id="nickname" type="text" placeholder="Nickname"  name="nickname" required>
                         <label for="email"></label>
                         <input class="form-control"type="email" id="name" placeholder="Email" name="email" required>
+                        <label for="linkedin"></label>
+                        <input class="form-control"type="text" id="linkedin" placeholder="Linkedin (opcional)" name="linkedin">
                         <button class="btn" title="Enviar link" type="submit" >ENVIAR LINK</button>
                     </div>
                 </form>
