--- a/thankyou.html
+++ b/thankyou.html
@@ -37,9 +37,7 @@
 
     <section class="container">
         <h1>Obrigada!</h1>
-        <p>Quisque dictum tincidunt porttitor. Mauris maximus libero felis, 
-            sed egestas libero suscipit ut. Quisque dictum tincidunt porttitor. Mauris maximus libero felis, 
-            sed egestas libero suscipit ut.</p>
+        <p>Você vai receber o link no seu email!</p>
     </section>
 
         
