--- a/thankyou.html
+++ b/thankyou.html
@@ -36,8 +36,12 @@
     </header>
 
     <section class="container">
-        <h1>Obrigada!</h1>
-        <p>Você vai receber o link no seu email!</p>
+        <div class="divContainer">
+            <h1>Obrigada!</h1>
+            <p>Você vai receber o link no seu email!</p>
+           <!-- <img class="gifThankyou" src="img/thankyou.gif" alt="gifThankyou">-->
+        </div>
+        
     </section>
 
         
