--- a/thankyou.html
+++ b/thankyou.html
@@ -39,7 +39,7 @@
         <div class="divContainer">
             <h1>Obrigada!</h1>
             <p>Você vai receber o link no seu email!</p>
-           <!-- <img class="gifThankyou" src="img/thankyou.gif" alt="gifThankyou">-->
+            <img class="gifThankyou" src="img/thankyou.gif" alt="gifThankyou">
         </div>
         
     </section>
