--- a/index.html
+++ b/index.html
@@ -57,14 +57,12 @@
                         <p>Duis fermentum orci quam, id commodo justo fringilla ac.</p>
                     </div>
                 
-                    <form class="d-flex justify-content-center" action="https://agenciareboot.api-us1.com" method="POST"> 
+                    <form class="d-flex justify-content-center" id="formulario"> 
                         <div class="form-group">
                             <label for="nickname"></label>
                             <input class="form-control" id="nickname" type="text" placeholder="Nickname"  name="nickname" required>
                             <label for="email"></label>
-                            <input class="form-control"type="email" id="name" placeholder="Email" name="email" required>
-                            <label for="linkedin"></label>
-                            <input class="form-control"type="text" id="linkedin" placeholder="Linkedin (opcional)" name="linkedin">
+                            <input class="form-control"type="email" id="email" placeholder="Email" name="email" required>
                             <button class="btn" title="Enviar link" type="submit" >ENVIAR LINK</button>
                         </div>
                     </form>
@@ -106,20 +104,10 @@
     </footer>
 
     <script src='./js/countDown.js'> </script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
     <script> fbq('track', 'ViewContent');</script>
-    <script>
-    $('#logo').mouseleave(function(){
-    $('.popUpBox').show();
-    });
-    $('.popUpBox').click(function(){
-        $('.popUpBox').hide();
-    });
-    $('.popupClose').click(function(){
-        $('.popUpBox').hide();
-    });
-
-    </script>
 </body>
 
 </html>
