--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                     <form class="d-flex justify-content-center" id="formulario"> 
                         <div class="form-group">
                             <label for="nickname"></label>
-                            <input class="form-control" id="nickname" type="text" placeholder="Nickname"  name="nickname" required>
+                            <input class="form-control" id="NICK" type="text" placeholder="Nickname"  name="NICK" required>
                             <label for="email"></label>
-                            <input class="form-control"type="email" id="email" placeholder="Email" name="email" required>
-                            <button class="btn" title="Enviar link" type="submit" >QUERO TER </br> MAIS LIBERDADE</button>
+                            <input class="form-control" type="email" id="EMAIL" placeholder="Email" name="EMAIL" required>
+                            <button class="btn" title="Enviar link" type="submit" >ENVIAR LINK</button>
                         </div>
                     </form>
                 </div>
@@ -98,8 +98,7 @@
         <span> ® 2020 - Reboot Company</span>
     </footer>
 
-    <script src='./js/countDown.js'> </script>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script> -->
+<script src='./js/countDown.js'> </script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <script> fbq('track', 'ViewContent');</script>
