--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <input class="form-control" id="NICK" type="text" placeholder="Nickname"  name="NICK" required>
                             <label for="email"></label>
                             <input class="form-control" type="email" id="EMAIL" placeholder="Email" name="EMAIL" required>
-                            <button class="btn" title="Enviar link" type="submit" >ENVIAR LINK</button>
+                            <button class="btn" title="Enviar link" type="submit" > QUERO TER <br>MAIS LIBERDADE </button>
                         </div>
                     </form>
                 </div>
