--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                     <form class="d-flex justify-content-center" id="formulario"> 
                         <div class="form-group">
                             <label for="nickname"></label>
-                            <input class="form-control" id="NICK" type="text" placeholder="Nickname"  name="NICK" required>
+                            <input class="form-control" id="NAME" type="text" placeholder="Nome"  name="NAME" required>
                             <label for="email"></label>
                             <input class="form-control" type="email" id="EMAIL" placeholder="Email" name="EMAIL" required>
+                            <label for="linkedin"></label>
+                            <input class="form-control" type="linkedin" id="LINKEDIN" placeholder="Linkedin (opcional)" name="LINKEDIN" required>
                             <button class="btn" title="Enviar link" type="submit" > QUERO TER <br>MAIS LIBERDADE </button>
                         </div>
                     </form>
