fiz input linkedin and button

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                             <label for="email"></label>
                             <input class="form-control" type="email" id="EMAIL" placeholder="Email" name="EMAIL" required>
                             <label for="linkedin"></label>
-                            <input class="form-control" type="linkedin" id="LINKEDIN" placeholder="Linkedin (opcional)" name="LINKEDIN" required>
-                            <button class="btn" title="Enviar link" type="submit" > QUERO TER <br>MAIS LIBERDADE </button>
+                            <input class="form-control" type="linkedin" id="LINKEDIN" placeholder="Linkedin (opcional)" name="LINKEDIN">
+                            <button class="btn" title="Enviar link" type="submit" > Enviar agora </button>
                         </div>
                     </form>
                 </div>
