--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     <form class="d-flex justify-content-center" id="formulario"> 
                         <div class="form-group">
                             <label for="nickname"></label>
-                            <input class="form-control" id="NAME" type="text" placeholder="Nome"  name="NAME" required>
+                            <input class="form-control" id="name" type="text" placeholder="Nome"  name="NAME" required>
                             <label for="email"></label>
-                            <input class="form-control" type="email" id="EMAIL" placeholder="Email" name="EMAIL" required>
+                            <input class="form-control" type="email" id="email" placeholder="Email" name="EMAIL" required>
                             <label for="linkedin"></label>
-                            <input class="form-control" type="linkedin" id="LINKEDIN" placeholder="Linkedin (opcional)" name="LINKEDIN">
+                            <input class="form-control" type="linkedin" id="linkedin" placeholder="Linkedin (opcional)" name="LINKEDIN">
                             <button class="btn" title="Enviar link" type="submit" > Enviar agora </button>
                         </div>
                     </form>
