--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <script src='./js/countDown.js'> </script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
+    <script type="text/javascript" async src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/f0ce6a25-a717-4c71-85f8-4c36e3b6d226-loader.js" ></script>
 </body>
 
 </html>
