--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <h2>Consiga as informações por aqui!</h2> 
                     </div>
                 
-                    <form class="d-flex justify-content-center" id="formulario"> 
+                    <form class="d-flex justify-content-center" id="formulario" action="./thankyou.html"> 
                         <div class="form-group">
                             <label for="nickname"></label>
                             <input class="form-control" id="name" type="text" placeholder="Nome"  name="NAME" required>
